# astroz

./: .gitignore  Justfile  README.md  build.zig  build.zig.zon  new_prop_notes.md
.github/: landing_page.html
.github/workflows/: cd.yaml  cd.yml  ci.yaml  ci.yml  nightly.yaml  python.yaml  test_zig.yml
benchmarks/: jax_cpu_bench.py  jax_gpu_bench.py  python_astroz_bench.py  python_bench.py  python_sgp4_bench.py  rust_bench.rs  sgp4_compat_test.py  zig_sgp4_bench.zig
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/astroz/: __init__.py  _astroz.pyi  api.py
bindings/python/src/: conjunction.zig  main.zig  orbital_mechanics.zig  propagator.zig  python.zig  satrec.zig  sgp4.zig  shared.zig  tle.zig
docs/: main.wasm
examples/: README.md  cesium_fast.py  cesium_template.html  conjunction_screening.py  constellation_phasing.zig  create_ccsds_packet.zig  create_ccsds_packet_config.json  create_ccsds_packet_config.zig  earth_mars_transfer.zig  maneuver_planning.zig  orbit_maneuvers.zig  orbit_phase_change.zig  orbit_plane_change.zig  orbit_prop.zig  orbit_prop_impulse.zig  parse_ccsds.zig  parse_ccsds_file_sync.zig  parse_fits_file.zig  parse_fits_image.zig  parse_tle.zig  parse_vita49.zig  parse_vita49_callback.zig  precess_star.zig  propagation.zig  python_sgp4.py  sgp4_propagation.zig  simple_monte_carlo.zig  simple_spacecraft_orientation.zig  spice_planetary_query.zig  spice_propagation.zig  transfer_propagation.zig  wcs.zig
python/: README.md  pyproject.toml  setup.py
python/astroz/: __init__.py  _lib.py  coords.py  exceptions.py  orbital.py  sgp4.py  tle.py
src/: Ccsds.zig  Constellation.zig  Daf.zig  Datetime.zig  Ecs.zig  EquatorialCoordinateSystem.zig  Fits.zig  Lsk.zig  Mission.zig  MonteCarlo.zig  OrbitalMechanics.zig  Satellite.zig  Sdp4.zig  Sdp4Batch.zig  Sgp4.zig  Sgp4Batch.zig  Sgp4Constellation.zig  Spacecraft.zig  Spice.zig  Tle.zig  Uslp.zig  Vita49.zig  WorldCoordinateSystem.zig  calculations.zig  ccsds.zig  constants.zig  coordinates.zig  dispatch.zig  fits.zig  lib.zig  parsers.zig  simdKernels.zig  simdMath.zig  spacecraft.zig  time.zig  tle.zig  validation_tests.zig  vita49.zig
src/c_api/: allocator.zig  coordinates.zig  error.zig  orbital_mechanics.zig  root.zig  sgp4.zig  tle.zig
src/propagators/: ForceModel.zig  Integrator.zig  Propagator.zig  propagators.zig
src/sgp4/: sgp4.zig  simdMath.zig
test/: attitude_data.csv  dramatic_attitude_data.csv  earth_mars_transfer.csv  small.fits
