[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astroz"
dynamic = ["version"]
description = "Python bindings for astroz - high-performance astrodynamics library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["astrodynamics", "orbital-mechanics", "sgp4", "tle", "satellite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Repository = "https://github.com/ATTron/astroz"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "astroz.__version__.__version__"}

[tool.setuptools.package-data]
astroz = ["lib/*"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-manylinux_i686"
archs = ["native"]

[tool.cibuildwheel.linux]
before-all = "curl -sL https://ziglang.org/download/index.json | python3 -c \"import sys,json; print(json.load(sys.stdin)['master']['x86_64-linux']['tarball'])\" | xargs curl -L | tar -xJ -C /opt && ls /opt/ && ln -sf $(find /opt -maxdepth 1 -name 'zig-linux-*' -type d)/zig /usr/local/bin/zig"
before-build = "cd {project} && /usr/local/bin/zig build c-api && mkdir -p python/astroz/lib && cp zig-out/lib/libastroz_c.so python/astroz/lib/"

[tool.cibuildwheel.macos]
# macOS doesn't use containers, so zig from setup-zig action is available
before-build = "cd {project} && zig build c-api && mkdir -p python/astroz/lib && cp zig-out/lib/libastroz_c.dylib python/astroz/lib/"

