[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astroz"
dynamic = ["version"]
description = "Python bindings for astroz - high-performance astrodynamics library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["astrodynamics", "orbital-mechanics", "sgp4", "tle", "satellite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Repository = "https://github.com/ATTron/astroz"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "astroz.__version__.__version__"}

[tool.setuptools.package-data]
astroz = ["lib/*"]
