[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astroz"
version = "0.4.4"
description = "Python bindings for astroz - high-performance astrodynamics library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["astrodynamics", "orbital-mechanics", "sgp4", "tle", "satellite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = ["sgp4"]  # For benchmarks and testing
docs = ["pdoc"]

[project.urls]
Repository = "https://github.com/ATTron/astroz"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
astroz = ["*.so", "*.dylib", "*.pyd", "py.typed", "*.pyi"]
